--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npx dotenv-cli -- nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,28 +18,39 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy:dev": "npm run build && sls offline",
+    "deploy": "npm run build && sls deploy"
   },
   "dependencies": {
+    "@codegenie/serverless-express": "^4.14.0",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^7.1.5",
+    "aws-lambda": "^1.0.7",
+    "axios": "^1.6.8",
     "helmet": "^4.2.0",
+    "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "uuid": "^8.3.1"
+    "typeorm": "^0.2.45",
+    "uuid": "^8.3.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.2",
     "@nestjs/schematics": "^7.2.1",
     "@nestjs/testing": "^7.5.1",
+    "@types/aws-lambda": "^8.10.137",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
@@ -48,18 +59,21 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
+    "dotenv-cli": "^7.4.1",
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.4.2",
+    "jest": "^29.7.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^13.4.0",
     "supertest": "^4.0.2",
-    "ts-jest": "26.2.0",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
